<resources>
    <string name="app_name">EduEmpowerYD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_next">Next</string>
    <string name="spinner_hint">Students/Instructors</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
    <string name="msg_confirm_passwor">Confirm password</string>
    <string name="msg_already_have_an">Already have an account? Sign in</string>
    <string name="lbl_we">We</string>
    <string name="msg_human_resour">&#128222; Human Resource</string>
    <string name="lbl_fr">Fr</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_programming">⌨️ Programming</string>
    <string name="lbl_mo">Mo</string>
    <string name="msg_forgot_password">forgot password?</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_username">Username</string>
    <string name="msg_foreign_lang">&#128220; Foreign language learning</string>
    <string name="lbl_pyschology">&#129300; Pyschology</string>
    <string name="lbl_tu">Tu</string>
    <string name="lbl_eduempower">EDUEMPOWER</string>
    <string name="lbl_july_2023">July, 2023</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
    <string name="msg_learn_new_thing">Learn new things and develop your
problem solving skills </string>
    <string name="msg_student_instruc">Student/Instructor</string>
    <string name="msg_forgot_password2">Forgot Password</string>
    <string name="msg_forgot_password3">
Please enter the email address you\u2019d like your password reset information sent to</string>
    <string name="msg_already_have_an2">Already have an account? </string>
    <string name="msg_content_crea"> &#127916; Content Creation</string>
    <string name="msg_already_have_an3"> <u>Sign in</u></string>
    <string name="msg_video_editi">&#127902;️ Video Editing</string>
    <string name="lbl_30">30</string>
    <string name="lbl_31">31</string>
    <string name="lbl_su">Su</string>
    <string name="lbl_password">Password</string>
    <string name="msg_explore_your_ne">Explore your
new skills today</string>
    <string name="msg_mobile_appl">&#128241;️ Mobile Application Development</string>
    <string name="lbl_instructor">Instructor</string>
    <string name="lbl_marks_grade">Marks/Grade</string>
    <string name="msg_machine_lear">&#128190; Machine Learning</string>
    <string name="lbl_finance">&#128176; Finance</string>
    <string name="lbl_th">Th</string>
    <string name="lbl_marketing">&#128200;Marketing</string>
    <string name="lbl_science">&#128300; Science</string>
    <string name="lbl_survey">SURVEY</string>
    <string name="lbl_20">20</string>
    <string name="msg_please_enter_th">Please enter the email address you\u2019d like your password reset information sent to</string>
    <string name="lbl_middle_school">Middle school</string>
    <string name="lbl_23">23</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="msg_software_dev">&#128187; Software development</string>
    <string name="lbl_22">22</string>
    <string name="lbl_arts">&#127912;Arts </string>
    <string name="lbl_27">27</string>
    <string name="lbl_28">28</string>
    <string name="lbl_25">25</string>
    <string name="lbl_26">26</string>
    <string name="lbl_college">College</string>
    <string name="msg_you_can_learn_v">You can learn various kinds of
courses in your hand</string>
    <string name="msg_empower_your_ed">Empower your
education to next level</string>
    <string name="lbl_29">29</string>
    <string name="lbl_sa">Sa</string>
    <string name="lbl_qualification">Qualification</string>
    <string name="lbl_log_in">LOG IN</string>
    <string name="msg_full_name_email">Full name
Email address
Phone number
Birth Date                    Gender
Educational details</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_business">&#127915;Business</string>
    <string name="lbl_10">10</string>
    <string name="lbl_sign_up"><u>Sign up</u></string>
    <string name="lbl_11">11</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_sign_up2">sign up</string>
    <string name="lbl_16">16</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_high_school">High school</string>
    <string name="lbl_15">15</string>
    <string name="msg_username_email">Username
Email address
Phone number
Birth Date                    Gender
Educational status
Password
Confirm password</string>
    <string name="lbl_18">18</string>
    <string name="lbl_19">19</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_student">Student</string>
    <string name="lbl_register">REGISTER</string>
    <string name="lbl">&gt;</string>
    <string name="lbl_done">done</string>
    <string name="lbl_log_in2">lOG IN</string>
    <string name="lbl_register_as">REGISTER AS</string>
    <string name="lbl_01">01</string>
    <string name="lbl_primary_school">Primary school</string>
    <string name="lbl_02">02</string>
    <string name="msg_example_example">example@example.com</string>
    <string name="lbl_05">05</string>
    <string name="lbl_06">06</string>
    <string name="lbl_03">03</string>
    <string name="lbl_04">04</string>
    <string name="lbl_09">09</string>
    <string name="lbl_07">07</string>
    <string name="lbl_08">08</string>
    <string name="lbl_edu">EDU</string>
    <string name="lbl_photography">&#128247; Photography</string>
    <string name="lbl_robotics"> &#129522;Robotics</string>
    <string name="lbl_forgot_password">Forgot Password
</string>
    <string name="msg_please_select_b">Please select based on your interest</string>
    <string name="lbl_empower">EMPOWER</string>
    <string name="msg_web_developm">&#128187; Web Development</string>
    <string name="lbl_institute">Institute</string>
    <string name="lbl_architecture">⛩️ Architecture</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="birth_date">Birth date</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="educational_details">Educational details</string>
    <string name="course_name">Introduction to General Chemistry</string>
    <string name="course_description">This course offers a comprehensive yet accesible chemistry foundation.Start your chemistry adventure today!</string>
    <string name="lbl_topic">Topic</string>
    <string name="lbl_edit_discussion">Edit Discussion </string>
    <string name="msg_are_two_atoms_o">Are two atoms of the same element identical. If yes, what is the metric to identify? If no, what are the differences between both?</string>
    <string name="lbl_add_new_chapter">Add new chapter</string>
    <string name="msg_atomic_substanc">Atomic substance around us</string>
    <string name="lbl_add_discussion">Add Discussion</string>
    <string name="lbl_upload">Upload</string>
    <string name="lbl_no_file_type">No file type</string>
    <string name="msg_biochemistry_w">Biochemistry: When Chemistry Gets Life</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="msg_acids_and_bases">Acids and Bases: The pHun Stuff</string>
    <string name="lbl_confirm2">confirm</string>
    <string name="lbl_pdf">PDF</string>
    <string name="msg_quiz_1_brain_b">Quiz 1: Brain Busters!</string>
    <string name="msg_discussion_foru">discussion Forum</string>
    <string name="msg_comment_here">Comment here ...</string>
    <string name="msg_organic_chemist">Organic Chemistry: Carbon\u2019s Many Friends</string>
    <string name="lbl_brandon">Brandon</string>
    <string name="msg_add_discussion">Add Discussion
Are you sure you want to add this discussion? </string>
    <string name="msg_delete_discussi2">Delete Discussion
Are you sure you want to delete this discussion forum? This action is irreversible.</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_siti_norhaliza">Siti Norhaliza</string>
    <string name="msg_delete_discussi3">Delete Discussion
</string>
    <string name="lbl_yes">Yes</string>
    <string name="msg_add_some_commen">Add some comments!</string>
    <string name="msg_search_your_top">Search your topic</string>
    <string name="lbl_jess_brailey">Jess Brailey</string>
    <string name="msg_no_two_atoms_o">No. Two atoms of the same chemical element are typically not identical. First of all, there is a range of possible states that the electrons of an atom can occupy. Two atoms of the same element can be different if their electrons are in different states.</string>
    <string name="msg_delete_discussi">delete DISCUSSION FORUM</string>
    <string name="msg_jessbrailey_gma">jessbrailey@gmail.com</string>
    <string name="lbl_video_here">Video here</string>
    <string name="lbl_save_changes">Save CHANGES</string>
    <string name="lbl_add_discussion2">Add Discussion </string>
    <string name="lbl_video">Video</string>
    <string name="msg_discussion_topi">Discussion Topic</string>
    <string name="lbl_add_discussion3">Add Discussion
</string>
    <string name="msg_are_you_sure_yo">Are you sure you want to delete this discussion forum? This action is irreversible.</string>
    <string name="msg_introduction_to">Introduction to General Chemistry</string>
    <string name="lbl_delete">Delete</string>
    <string name="msg_are_you_sure_yo2">Are you sure you want to add this discussion? </string>
    <string name="msg_the_atomic_trut">The Atomic Truth: It\u2019s Mostly Empty Space, Just Like My Social Calendar</string>
    <string name="lbl_file_type">File type</string>
    <string name="lbl_wai_ling">Wai Ling</string>
    <string name="msg_atomic_substanc2">Atomic Substance Around Us</string>
    <string name="lbl_quiz">Quiz</string>
    <string name="msg_the_periodic_ta">The Periodic Table: More Than Just a Chart</string>
    <string name="lbl_comment">Comment</string>
    <string name="discussion_topic">Discussion Topic</string>
    <string name="add_some_comments">Add some comments!</string>
    <string name="discussion_forum">Discussion Forum</string>
    <string name="tooopiccc">TOOOPICCC</string>
    <string name="comment_comment_comment">Comment comment comment</string>
    <string name="name">Name</string>
    <string name="delete_discussion">Delete Discussion</string>
    <string name="are_you_sure_you_want_to_delete_this_discussion_forum_this_action_is_irreversible">Are you sure you want to delete this discussion forum? This action is irreversible.</string>
    <string name="content">Content</string>
    <string name="add_some_contents">Add some contents!</string>
    <string-array name="chaptertype">
        <item>Video</item>
        <item>PDF</item>
        <item>Video</item>
        <item>Quiz</item>
        <item>PDF</item>
        <item>Video</item>
    </string-array>
    <string name="title_activity_update">UpdateActivity</string>
    <string-array name="courses">
        <item>Web Development</item>
        <item>Software Development</item>
        <item>Account Development</item>
        <item>Bio Development</item>
    </string-array>
</resources>