<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearDeleteconfirma"
        style="@style/groupStylewhite_2"
        android:layout_width="match_parent"
        android:layout_height="263dp"
        android:layout_marginStart="@dimen/_52pxh"
        android:layout_marginTop="@dimen/_255pxv"
        android:layout_marginEnd="@dimen/_39pxh"
        android:layout_marginBottom="@dimen/_363pxv"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDescriptionOne"
            style="@style/txtSorabold20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:gravity="center_horizontal"
            android:text="@string/delete_discussion"
            tools:text="@string/delete_discussion" />

        <TextView
            android:id="@+id/txtDescriptionTwo"
            style="@style/txtPoppinslight18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:gravity="center_horizontal"
            android:text="@string/are_you_sure_you_want_to_delete_this_discussion_forum_this_action_is_irreversible"
            tools:text="@string/are_you_sure_you_want_to_delete_this_discussion_forum_this_action_is_irreversible" />

        <FrameLayout
            android:id="@+id/frameStackcancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60pxv"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_30pxh">

            <LinearLayout
                android:id="@+id/linearRowcancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginBottom="@dimen/_12pxv"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCancel"
                    style="@style/txtSoraregular20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.51"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_cancel"
                    tools:text="@string/lbl_cancel" />

                <TextView
                    android:id="@+id/txtDelete"
                    style="@style/txtSoraregular20_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_76pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.49"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_delete"
                    tools:text="@string/lbl_delete" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameStacklinefortyfive"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56pxv"
                android:layout_gravity="start">

                <View
                    android:id="@+id/lineLineFortyFive"
                    android:layout_width="@dimen/_301pxh"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_gravity="top|start"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:background="@color/black_900_3f" />

                <View
                    android:id="@+id/lineLineFortySix"
                    android:layout_width="@dimen/_1pxh"
                    android:layout_height="@dimen/_56pxv"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:background="@color/black_900_3f" />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
